# CrewAI-Tester

./: README.md  agents.py  main.py  prompt.txt  pyproject.toml  stepdefinition.java  tasks.py
api_test_crewai/: .env  agents.py  feature.feature  main.py  step_definitions.py  tasks.py
bdd_testing_flask/features/: feature.feature
bdd_testing_flask/features/steps/: step_definitions.py
flask-api/: Dockerfile  app.py  swagger.yaml
flask_api_testing/: app.py
